fixed alignments

--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -29,3 +29,13 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 background-attachment: fixed;
 background-size: cover;
 }
+
+main{
+
+    min-height: 400px;
+}
+
+input {
+
+    margin-bottom: 3px;
+}
